--- a/LeetCode/215. Kth Largest Element in an Array.md
+++ b/LeetCode/215. Kth Largest Element in an Array.md
@@ -1,3 +1,1 @@
-# 215. Kth Largest Element in an Array
-
-### Aproach 1 HeapSort
+# [215. Kth Largest Element in an Array](https://leetcode.com/problems/kth-largest-element-in-an-array/)
