--- a/LeetCode/75. Sort Colors.md
+++ b/LeetCode/75. Sort Colors.md
@@ -40,3 +40,37 @@ Space complexity is O(1)
 
 
 ### Aproach 2 Counting sort
+
+Since the value range of the array is really small, so we can use Counting Sort algorithm.
+
+```java
+public void sortColors(int[] nums) {
+        int[] count = new int[3];
+        for (int num : nums) {
+            count[num] += 1;
+        }
+      
+        int[] starts = new int[3];
+        int start = 0;
+        for (int i = 0; i < count.length; i++) {
+            starts[i] = start;
+            start += count[i];
+        }
+      
+        start = 0;
+        for (int i = 0; i < starts.length; i++) {
+            for (int j = 0; j < count[i]; j++) {
+                nums[start++] = i;
+            }
+        }
+      
+    }
+```
+
+
+
+#### Complexity
+
+Time complexity is O ( N + K)  , where k is the range of array values.
+
+Space complexity is O(k)
